force-app/main/default/objects/AOP__c/AOP__c.object-meta.xml
<CustomObject>
    <label>AOP</label>
    <nameField>
        <displayFormat>AOP- {000}</displayFormat>
        <label>AOP No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AOP</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>