force-app/main/default/objects/AOP__c/fields/AOP_CP_Name__c.field-meta.xml
<CustomField>
    <fullName>AOP_CP_Name__c</fullName>
    <formula>Channel_Partner__r.Name</formula>
    <label>AOP CP Name</label>
    <type>Text</type>
</CustomField>