force-app/main/default/objects/AOP__c/fields/AOP_Non_AOP_Signed__c.field-meta.xml
<CustomField>
    <fullName>AOP_Non_AOP_Signed__c</fullName>
    <label>AOP/Non AOP (Signed)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>