force-app/main/default/objects/AOP__c/fields/Approver_L1__c.field-meta.xml
<CustomField>
    <fullName>Approver_L1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Invoice Clearing L1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AOP</relationshipName>
    <type>Lookup</type>
</CustomField>