force-app/main/default/objects/AOP__c/fields/Approver_L2__c.field-meta.xml
<CustomField>
    <fullName>Approver_L2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Invoice Clearing L2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AOP1</relationshipName>
    <type>Lookup</type>
</CustomField>