force-app/main/default/objects/AOP__c/fields/Brokerage_for_Outstation__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_for_Outstation__c</fullName>
    <label>Brokerage % for Outstation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>