force-app/main/default/objects/AOP__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <label>Channel Partner</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>SAP code not created on Channel Partner .</errorMessage>
        <filterItems>
            <field>Broker__c.SAP_CP_Code__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Broker__c</referenceTo>
    <relationshipLabel>AOP</relationshipLabel>
    <relationshipName>AOP</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>