force-app/main/default/objects/AOP__c/fields/Commitment_min__c.field-meta.xml
<CustomField>
    <fullName>Commitment_min__c</fullName>
    <label>Commitment min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>