force-app/main/default/objects/AOP__c/fields/CP_Mandate_Scheme__c.field-meta.xml
<CustomField>
    <fullName>CP_Mandate_Scheme__c</fullName>
    <description>This field will be printed in invoice</description>
    <label>CP Mandate Scheme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>