force-app/main/default/objects/AOP__c/fields/Projects__c.field-meta.xml
<CustomField>
    <fullName>Projects__c</fullName>
    <label>Projects</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Runwal Gardens</fullName>
            </value>
            <value>
                <fullName>Runwal Bliss</fullName>
            </value>
            <value>
                <fullName>Runwal Pinnacle</fullName>
            </value>
            <value>
                <fullName>5th Avenue - Runwal Avenue</fullName>
            </value>
            <value>
                <fullName>Runwal Garden City</fullName>
            </value>
            <value>
                <fullName>5th Avenue - Runwal Bliss</fullName>
            </value>
            <value>
                <fullName>Runwal Edge Dombivli</fullName>
            </value>
            <value>
                <fullName>Runwal Commerz Kanjurmarg</fullName>
            </value>
            <value>
                <fullName>Runwal MyCity</fullName>
            </value>
            <value>
                <fullName>Runwal Avenue</fullName>
            </value>
            <value>
                <fullName>Primrose MHADA</fullName>
            </value>
            <value>
                <fullName>Runwal Forests</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>