force-app/main/default/objects/AOP__c/fields/Relevant_zone__c.field-meta.xml
<CustomField>
    <fullName>Relevant_zone__c</fullName>
    <label>Relevant zone</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>SOBO</fullName>
            </value>
            <value>
                <fullName>Dombivali</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>