force-app/main/default/objects/AOP__c/recordTypes/AOP.recordType-meta.xml
<RecordType>
    <fullName>AOP</fullName>
    <active>true</active>
    <label>AOP</label>
</RecordType>