force-app/main/default/objects/AOP__c/recordTypes/CP_Mandate.recordType-meta.xml
<RecordType>
    <fullName>CP_Mandate</fullName>
    <active>true</active>
    <label>CP Mandate</label>
</RecordType>